--- a/index.css
+++ b/index.css
@@ -269,7 +269,7 @@ tr:hover {
     transition: all 0.2s ease;
     font-weight: 600;
     white-space: nowrap;
-    min-width: 120px;
+    width: 100%;
 }
 
 .btn-clear-all:hover {
